<resources>
    <string name="app_name">Blood Donation</string>
    <string name="cmp_name_login">Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="Username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="EnterName">Enter Name</string>
    <string name="password">Password</string>
    <string name="login">Login Screen</string>
    <string name="signup">Signup</string>
    <string name="active_donor">Active Donor</string>
    <string name="search">search</string>
    <string name="setting">Settings</string>
    <string name="new_member">New Member</string>
    <string name="newOrNot">Already a member</string>
    <string name="country">Country</string>
    <string name="status">Status</string>
    <string name="contact">Contact</string>
    <string name="bloodgroup">Bloodgroup</string>
    <string name="register">Register</string>
</resources>